data/Java/16-illegal-constructor-name/3/[M]Error.txt
*https://stackoverflow.com/questions/579445/java-constructors
Program.java:9: error: invalid method declaration; return type required
    public Bike(int startCadence, int startSpeed, int startGear) {
           ^